djvusmooth (0.2.16) UNRELEASED; urgency=low

  * Drop support for Python 2.5.
  * Improve error handling.
  * Improve the manual page:
    + Use minus sign instead of hyphen in dates.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 05 Jul 2015 12:53:18 +0200

djvusmooth (0.2.15) unstable; urgency=low

  [ Jakub Wilk ]
  * Improve the setup script:
    + Run msgfmt with the --verbose option.
  * Improve error handling.
  * Use HTTPS URLs when they are available, in documentation and code.
  * Document that is possible to edit hyperlinks.
    Thanks to Janusz S. Bień for the bug report.
    https://bitbucket.org/jwilk/djvusmooth/issue/13
  * Use the notebook widget regardless of wxPython version.
  * Don't hardcode path to the binary in the desktop file.
  * Add experimental support for wxPython 3.0.
    Thanks to Olly Betts for the bug report and the initial patch.
    https://bugs.debian.org/758950
  * Drop support for wxPython 2.6.

  [ Daniel Stender ]
  * Add German translation for the desktop file.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 07 Oct 2014 21:46:07 +0200

djvusmooth (0.2.14) unstable; urgency=low

  [ Jakub Wilk ]
  * Add “Open recent” submenu.
    https://bitbucket.org/jwilk/djvusmooth/issue/7
  * Do not abort opening a new file if user chose to save the current one.
  * Check Python version at runtime.
  * Improve the manual page, as per man-pages(7) recommendations:
    + Remove the “AUTHOR” section.
    + Rename the “ENVIRONMENT VARIABLES” section as “ENVIRONMENT”.
    + Make “PORTABILITY” and “REPORTING BUGS” subsections of the “BUGS”
      section.
  * Improve the setup script:
    + Make “setup.py clean -a” remove compiled manual page (unless it was built
      by “setup.py sdist”).
    + Fix compatibility with Python 2.5 and 2.6 (broken in 0.2.12).
  * Improve error handling.

  [ C. Daniel Sanchez R. ]
  * Update the Spanish translation.

  [ Kyrill Detinov ]
  * Update the Russian translation.
