@@ -18,7 +18,6 @@ Checks for djvusmooth dependencies.
 '''
 
 DDJVU_API_MIN_VERSION = 26
-PYTHON_DJVULIBRE_MIN_VERSION = (0, 1, 4)
 
 djvulibre_path = None
 
@@ -41,17 +40,9 @@ def _check_djvu():
     else:
         djvulibre_path = set_dll_search_path()
     try:
-        from djvu.decode import __version__ as djvu_decode_version
+        import djvu.decode
     except ImportError as exc:
         raise ImportError('{exc}; perhaps python-djvulibre is not installed'.format(exc=exc))
-    python_djvu_decode_version, ddjvu_api_version = djvu_decode_version.split('/')
-    if int(ddjvu_api_version) < DDJVU_API_MIN_VERSION:
-        raise ImportError('DjVuLibre with DDJVU API >= {ver} is required'.format(ver=DDJVU_API_MIN_VERSION))
-    python_djvu_decode_version = map(int, python_djvu_decode_version.split('.'))
-    if tuple(python_djvu_decode_version) < PYTHON_DJVULIBRE_MIN_VERSION:
-        raise ImportError('python-djvulibre >= {ver} is required'.format(
-            ver='.'.join(map(str, PYTHON_DJVULIBRE_MIN_VERSION))
-        ))
 
 def _check_wx():
     try:
